--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,11 @@
         },
       }
     </script>
+    <style type="text/tailwindcss">
+      @layer utilities {
+        [x-cloak] { display: none !important; }
+      }
+    </style>
 </head>
 <body x-data="appXData()" x-init="setInterval(refreshLiveData, 10000)" class="flex flex-col gap-4 md:gap-6 bg-gradient-to-br from-blue-900 to-blue-900/25 min-h-screen py-4 px-6 md:py-8 md:px-12">
     <div class="flex flex-row justify-end w-full gap-6">
