--- a/static/index.html
+++ b/static/index.html
@@ -147,7 +147,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <template x-for="(sensorData, index) in history[selectedSensor]">
+                <template x-for="(sensorData, index) in history[selectedSensor].slice(0, 10)">
                     <tr :class="{ 'bg-white/10': index % 2 == 1 }">
                         <td class="text-center py-2 leading-4">
                             <h4 x-text="sensorData.time.substring(0, 5)" class="text-lg lg:text-2xl font-bold leading-4 pt-1 lg:leading-5"></h4>
