--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,7 @@
       }
     </style>
 </head>
-<body x-data="appXData()" x-init="setInterval(refreshLiveData, 10000)" class="flex flex-col gap-4 md:gap-6 bg-gradient-to-br from-blue-900 to-blue-900/25 min-h-screen py-4 px-6 md:py-8 md:px-12">
+<body x-data="appXData()" class="flex flex-col gap-4 md:gap-6 bg-gradient-to-br from-blue-900 to-blue-900/25 min-h-screen py-4 px-6 md:py-8 md:px-12">
     <div class="flex flex-row justify-end w-full gap-6">
         <div class="flex flex-col justify-center text-right">
             <span class="text-lg font-bold leading-5 pt-1">Prénom Nom</span>
@@ -37,7 +37,8 @@
 
     <div class="flex flex-col md:flex-row gap-12 xl:container mx-auto xl:px-6 md:pb-16 h-full">
         <div class="flex flex-col gap-6 md:gap-12 w-full">
-            <div class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
+            <!-- Refresh live data every 5 minutes -->
+            <div x-init="$interval(refreshLiveData, 300000)" class="h-96 rounded-3xl bg-white/20 w-full relative overflow-hidden">
                 <button
                  class="absolute top-6 right-6 h-12 w-12 flex items-center justify-center transition z-30 rounded-full"
                  x-bind:disabled="isFetchingLiveData"
@@ -75,11 +76,11 @@
                       :class="{ 'bg-white/20 hover:bg-white/20': selectedSensor == sensor }"
                       @click="selectSensor(sensor)"
                     >
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0">
                             <path d="M10 5H5V10C6.32608 10 7.59785 9.47322 8.53553 8.53553C9.47322 7.59785 10 6.32608 10 5ZM23.3333 5H20C20 8.97825 18.4196 12.7936 15.6066 15.6066C12.7936 18.4196 8.97825 20 5 20V23.3333C15.1333 23.3333 23.3333 15.1167 23.3333 5ZM16.6667 5H13.3333C13.3333 7.21014 12.4554 9.32975 10.8926 10.8926C9.32975 12.4554 7.21014 13.3333 5 13.3333V16.6667C8.09419 16.6667 11.0617 15.4375 13.2496 13.2496C15.4375 11.0617 16.6667 8.09419 16.6667 5M16.6667 35H20C20 31.0218 21.5804 27.2064 24.3934 24.3934C27.2064 21.5804 31.0218 20 35 20V16.6667C30.1377 16.6667 25.4745 18.5982 22.0364 22.0364C18.5982 25.4745 16.6667 30.1377 16.6667 35M30 35H35V30C33.6739 30 32.4021 30.5268 31.4645 31.4645C30.5268 32.4021 30 33.6739 30 35M23.3333 35H26.6667C26.6667 32.7899 27.5446 30.6702 29.1074 29.1074C30.6702 27.5446 32.7899 26.6667 35 26.6667V23.3333C31.9058 23.3333 28.9383 24.5625 26.7504 26.7504C24.5625 28.9383 23.3333 31.9058 23.3333 35V35Z" fill="white"/>
                         </svg>
-                        <span x-text="sensorData.nom ?? sensor" class="text-lg font-md"></span>
-                        <svg x-if="history[sensor][0] !== null" width="24" height="24" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-0.5 opacity-50">
+                        <span x-text="sensorData.nom ?? sensor" class="text-lg font-md leading-4"></span>
+                        <svg x-if="history[sensor][0] !== null" width="24" height="24" viewBox="0 0 20 12" fill="none" xmlns="http://www.w3.org/2000/svg" class="mb-0.5 opacity-50 flex-shrink-0">
                             <path x-show="history[sensor][0].batterie > 0 && history[sensor][0].batterie <= 10" d="M4 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z" fill="white"/>
                             <path x-show="history[sensor][0].batterie > 10 && history[sensor][0].batterie <= 20" d="M5 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z" fill="white"/>
                             <path x-show="history[sensor][0].batterie > 20 && history[sensor][0].batterie <= 30" d="M7 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z" fill="white"/>
@@ -92,8 +93,8 @@
                             <path x-show="history[sensor][0].batterie > 90 && history[sensor][0].batterie <= 100" d="M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z" fill="white"/>
                         </svg>
 
-                        <div class="absolute right-0">
-                            <svg @click="sensorToRename = sensor" width="32" height="32" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg" class="mr-4">
+                        <div class="ml-auto">
+                            <svg @click="sensorToRename = sensor" width="32" height="32" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M25 26.6667L18.3333 33.3333H35V26.6667H25ZM20.1 11.9833L5 27.0833V33.3333H11.25L26.35 18.2333L20.1 11.9833ZM31.1833 13.4C31.8333 12.75 31.8333 11.6667 31.1833 11.05L27.2833 7.14999C26.9709 6.83997 26.5485 6.66602 26.1083 6.66602C25.6682 6.66602 25.2458 6.83997 24.9333 7.14999L21.8833 10.2L28.1333 16.45L31.1833 13.4Z" fill="white"/>
                             </svg>
                         </div>
@@ -202,7 +203,7 @@
                         <div class="flex flex-row justify-between items-center">
                             <h2 class="text-3xl font-semibold leading-6">Modifier le nom du capteur</h2>
                             <button @click="sensorToRename = null">
-                                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0">
                                     <path d="M30.0834 10.1492L27.8509 7.91666L19.0001 16.7675L10.1492 7.91666L7.91675 10.1492L16.7676 19L7.91675 27.8508L10.1492 30.0833L19.0001 21.2325L27.8509 30.0833L30.0834 27.8508L21.2326 19L30.0834 10.1492Z" fill="black"/>
                                 </svg>
                             </button>
@@ -212,8 +213,8 @@
                             <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M10 5H5V10C6.32608 10 7.59785 9.47322 8.53553 8.53553C9.47322 7.59785 10 6.32608 10 5ZM23.3333 5H20C20 8.97825 18.4196 12.7936 15.6066 15.6066C12.7936 18.4196 8.97825 20 5 20V23.3333C15.1333 23.3333 23.3333 15.1167 23.3333 5ZM16.6667 5H13.3333C13.3333 7.21014 12.4554 9.32975 10.8926 10.8926C9.32975 12.4554 7.21014 13.3333 5 13.3333V16.6667C8.09419 16.6667 11.0617 15.4375 13.2496 13.2496C15.4375 11.0617 16.6667 8.09419 16.6667 5M16.6667 35H20C20 31.0218 21.5804 27.2064 24.3934 24.3934C27.2064 21.5804 31.0218 20 35 20V16.6667C30.1377 16.6667 25.4745 18.5982 22.0364 22.0364C18.5982 25.4745 16.6667 30.1377 16.6667 35M30 35H35V30C33.6739 30 32.4021 30.5268 31.4645 31.4645C30.5268 32.4021 30 33.6739 30 35M23.3333 35H26.6667C26.6667 32.7899 27.5446 30.6702 29.1074 29.1074C30.6702 27.5446 32.7899 26.6667 35 26.6667V23.3333C31.9058 23.3333 28.9383 24.5625 26.7504 26.7504C24.5625 28.9383 23.3333 31.9058 23.3333 35V35Z" fill="black"/>
                             </svg>
-                            <span x-text="sensors[sensorToRename].nom ?? sensorToRename" class="text-lg font-md"></span>
-                            <svg x-if="history[sensorToRename][0] !== null" width="24" height="24" viewBox="0 0 20 12" fill="black" xmlns="http://www.w3.org/2000/svg" class="mb-0.5 opacity-75">
+                            <span x-text="sensors[sensorToRename].nom ?? sensorToRename" class="text-lg font-md leading-4"></span>
+                            <svg x-if="history[sensorToRename][0] !== null" width="24" height="24" viewBox="0 0 20 12" fill="black" xmlns="http://www.w3.org/2000/svg" class="mb-0.5 opacity-75 flex-shrink-0">
                                 <path x-show="history[sensorToRename][0].batterie > 0 && history[sensorToRename][0].batterie <= 10" d="M4 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z"/>
                                 <path x-show="history[sensorToRename][0].batterie > 10 && history[sensorToRename][0].batterie <= 20" d="M5 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z"/>
                                 <path x-show="history[sensorToRename][0].batterie > 20 && history[sensorToRename][0].batterie <= 30" d="M7 10V2L16 2V10M18 10.67V9H20V3H18V1.33C18 0.977262 17.8599 0.638971 17.6105 0.389548C17.361 0.140124 17.0227 0 16.67 0L1.33 0C0.6 0 0 0.6 0 1.33V10.67C0 11.0227 0.140124 11.361 0.389547 11.6105C0.638971 11.8599 0.977262 12 1.33 12L16.67 12C17.4 12 18 11.4 18 10.67Z"/>
@@ -249,6 +250,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://unpkg.com/@alpine-collective/toolkit-interval@1.0.2/dist/cdn.min.js" defer></script>
     <script src="//unpkg.com/alpinejs" defer></script>
     <script src="index.js"></script>
 </body>
