index: iPhone-specific canvas rounded fix

--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
 
                 <div class="flex flex-col absolute inset-0 z-0">
                     <div id="currentSensorDataPadding" class="h-32 flex-shrink-0"></div>
-                    <div class="h-full"><canvas id="graphChart"></canvas></div>
+                    <div class="h-full"><canvas id="graphChart" class="rounded-b-3xl"></canvas></div>
                 </div>
             </div>
 
