index: Even more responsive fixes AGAIN

--- a/static/index.html
+++ b/static/index.html
@@ -199,9 +199,9 @@
                  x-description="Modal panel, show/hide based on modal state."
                  class="inline-block align-bottom bg-white rounded-3xl text-left overflow-hidden shadow-xl transform transition-all lg:align-middle sm:max-w-2xl sm:w-full">
                 <div>
-                    <div class="flex flex-col gap-6 rounded-xl px-6 py-4 md:px-8 md:py-6 w-full flex flex-col text-black">
-                        <div class="flex flex-row justify-between items-center">
-                            <h2 class="text-2xl md:text-3xl font-semibold leading-5 pt-2 md:pt-0 md:leading-6">Modifier le nom du capteur</h2>
+                    <div class="flex flex-col gap-6 rounded-xl px-6 py-6 md:px-8 w-full flex flex-col text-black">
+                        <div class="flex flex-row justify-between items-center gap-3">
+                            <h2 class="text-2xl md:text-3xl font-semibold leading-5 md:leading-6">Modifier le nom du capteur</h2>
                             <button @click="sensorToRename = null">
                                 <svg width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg" class="flex-shrink-0">
                                     <path d="M30.0834 10.1492L27.8509 7.91666L19.0001 16.7675L10.1492 7.91666L7.91675 10.1492L16.7676 19L7.91675 27.8508L10.1492 30.0833L19.0001 21.2325L27.8509 30.0833L30.0834 27.8508L21.2326 19L30.0834 10.1492Z" fill="black"/>
