index: Added media social tags

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,18 @@
     <title>AYOTI</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Social meta tags -->
+    <meta property="og:title" content="AYOTI" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ayoti.rchartier.dev/" />
+    <meta property="og:image" content="https://ayoti.rchartier.dev/banner.png" />
+    <meta property="og:description" content="Interface web du projet AYOTI, traqueur de températures en temps réel" />
+    <meta property="og:site_name" content="AYOTI" />
+    <meta property="og:locale" content="fr_FR" />
+
+    <meta name="theme-color" content="#FF0000">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script>
