index: Change banner color

--- a/static/index.html
+++ b/static/index.html
@@ -15,7 +15,7 @@
     <meta property="og:site_name" content="AYOTI" />
     <meta property="og:locale" content="fr_FR" />
 
-    <meta name="theme-color" content="#FF0000">
+    <meta name="theme-color" content="#112356">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
