--- a/static/login.html
+++ b/static/login.html
@@ -24,7 +24,9 @@
   <div class="flex flex-col items-center gap-4 px-6 py-4">
     <h3 class="text-2xl font-semibold">Connexion à AYOTI</h3>
 
-    <form x-data="{password: ''}", action="/api/login" method="post" id="loginForm" class="flex flex-col gap-4 w-full">
+    <form x-data="{password: '' }", action="/api/login" method="post" id="loginForm" class="flex flex-col gap-4 w-full">
+      <span id="errorPassword" class="text-red-500 text-sm font-semibold hidden">Identifiants inconnus ou incorrects</span>
+
       <input
         type="text"
         id="loginId"
@@ -55,5 +57,12 @@
       </div>
     </form>
   </div>
+
+<script>
+  let errorKey = new URLSearchParams(location.search).get('error')
+  if (errorKey !== null) {
+    document.getElementById('errorPassword').classList.remove('hidden')
+  }
+</script>
 </body>
 </html>
